carousel width and fix slide jump issue

--- a/src/components/Carousel/style.module.scss
+++ b/src/components/Carousel/style.module.scss
@@ -4,7 +4,7 @@
 
 .slide {
   overflow: hidden;
-  // cursor: pointer;
+  cursor: pointer;
 
   .image_container {
     position: relative;
